# pyronova

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  justfile  pyproject.toml
.claude/commands/: test.md
.github/workflows/: ci.yml  release.yml
arena_submission/: Dockerfile  README.md  app.py  launcher.py  meta.json
benchmarks/: BENCH_PLAN.en.md  BENCH_PLAN.md  baseline.json  bench_gil.py  bench_inmem.py  bench_inmem_noop.py  bench_loopback.py  bench_loopback_noop.py  bench_plaintext.py  bench_subinterp.py  benchmark-1-reason.en.md  benchmark-10-final-verdict.en.md  benchmark-10-final-verdict.md  benchmark-11-vs-fastapi.md  benchmark-13-logging.en.md  benchmark-13-logging.md  benchmark-14-channel-dispatch.en.md  benchmark-14-channel-dispatch.md  benchmark-15-vs-actix-compression.md  benchmark-17-arena-head-to-head.md  benchmark-2-results.en.md  benchmark-3-full-stack.en.md  benchmark-4-features.en.md  benchmark-4-features.md  benchmark-5-refactor.en.md  benchmark-6-full-suite.en.md  benchmark-7-shared-state.en.md  benchmark-7-shared-state.md  benchmark-8-sse-regression.en.md  benchmark-8-sse-regression.md  benchmark-9-gil-memory.en.md  benchmark-9-gil-memory.md  fastapi_bench_app.py  mem_bench.sh  pyre_bench_app.py  run_bench.sh  run_comparison.sh  run_logging_bench.sh
benchmarks/results/2026-03-24_113354/: raw.json  summary.md
benchmarks/results/2026-03-24_140616/: raw.json  summary.md
benchmarks/rust-baseline/: Cargo.toml
benchmarks/rust-baseline/src/: actix_tls.rs  load_gen.rs
benchmarks/suite/: charts.py  post.lua  runner.py
benchmarks/suite/payloads/: large.json  medium.json  small.json
benchmarks/suite/servers/: pyre_gil.py  pyre_hybrid.py  pyre_subinterp.py  robyn_server.py
docs/: advisor-triage-2026-04-19.md  benchmark-linux-reproduce.md  developer-experience.md  dual-engine-design.md  features.md  gc-optimization-guide.md  gil-monitor-design.md  logging-design.en.md  logging-design.md  memory-leak-investigation-2026-04-19.md  phase-7.2-async-bridge.md  release-pipeline.md  rpc-engine-design.md  subinterp-c-extension-compat.md  subinterp-safe-ecosystem.md  tpc-rearch.md  zero-copy-design.md
examples/: ai_agent_server.py  fullstack_api.py  hello.py  hello_subinterp.py  sse_demo.py  trading_api.py  websocket_demo.py
python/pyreframework/: __init__.py  _async_engine.py  _bootstrap.py  app.py  config.py  context.py  cookies.py  engine.pyi  mcp.py  observability.py  rpc.py  testing.py  uploads.py
python/pyronova/: __init__.py  _async_engine.py  _bootstrap.py  app.py  cookies.py  crud.py  engine.pyi  health.py  mcp.py  rpc.py  testing.py  uploads.py
python/skytrade/: __init__.py  _async_engine.py  _bootstrap.py  app.py  engine.pyi  mcp.py  rpc.py
src/: app.rs  bench.rs  body_stream.rs  compression.rs  db.rs  grpc.rs  handlers.rs  interp.rs  json.rs  leak_detect.rs  lib.rs  logging.rs  monitor.rs  pyre_request_type.rs  pyronova_request_type.rs  response.rs  router.rs  state.rs  static_fs.rs  stream.rs  tls.rs  tpc.rs  types.rs  websocket.rs  worker.rs
src/bridge/: db_bridge.rs  main_bridge.rs
src/handlers/: gil.rs  subinterp.rs  tpc.rs
src/python/: body_stream.rs  interp.rs  mod.rs  stream.rs
src/server/: listener.rs  mod.rs
tests/: conftest.py  test_admission_control.py  test_all_features.py  test_async.py  test_async_bridge.py  test_async_isolation.py  test_async_shutdown.py  test_c_extensions.py  test_capi_hygiene.py  test_config_context.py  test_cookies_e2e.py  test_cookies_unit.py  test_cors_404.py  test_cors_e2e.py  test_crud.py  test_db_pg.py  test_env_var_worker.py  test_fast_response.py  test_ffi_panic_safety.py  test_fixes.py  test_hybrid.py  test_json_serialization.py  test_log_sampling.py  test_logging.py  test_mcp.py  test_observability.py  test_pyerr_no_stderr.py  test_routing_e2e.py  test_rpc.py  test_shared_state.py  test_static_files.py  test_stream_backpressure.py  test_subinterp_hooks.py  test_subinterp_memory_regression.py  test_testclient.py  test_tls.py  test_upload_streaming.py  test_uploads_e2e.py  test_websocket.py  test_ws_binary_client.py  (+1 more)
tests/e2e/: README.md  ws_binary_client.py  ws_binary_server.py
tests/multifile_app/: helpers.py  main.py  routes.py
