[package]
name = "skytrade-engine"
version = "1.2.0"
edition = "2021"

[lib]
name = "skytrade_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
matchit = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
form_urlencoded = "1"
crossbeam-channel = "0.5"
tokio-tungstenite = "0.26"
tungstenite = "0.26"
# base64 and sha1 provided transitively by tungstenite
futures-util = "0.3"
dashmap = "6"
tokio-stream = "0.1"
mimalloc = { version = "0.1", default-features = false }
