[package]
name = "pyreframework-engine"
version = "1.4.1"
edition = "2021"

[lib]
name = "pyreframework_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
matchit = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
form_urlencoded = "1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
tokio-tungstenite = "0.26"
tungstenite = "0.26"
# base64 and sha1 provided transitively by tungstenite
futures-util = "0.3"
dashmap = "6"
tokio-stream = "0.1"
tokio-util = "0.7"
mimalloc = { version = "0.1", default-features = false }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
pythonize = "0.28"

[profile.release]
lto = "fat"            # Cross-crate inlining: LLVM optimizes across hyper/tokio/pyo3 boundaries
codegen-units = 1      # Single codegen unit: max optimization at cost of compile time
opt-level = 3          # Aggressive optimization
strip = true           # Strip symbols: smaller binary, better icache
