[package]
name = "pyronova-engine"
version = "2.1.2"
edition = "2021"

[lib]
name = "pyronova_engine"
crate-type = ["cdylib"]

[features]
# Opt-in diagnostics for PyObject lifecycle leaks. Samples each
# PyObjRef drop as a `metrics::counter!` call — under the hood that's
# a lock-free atomic increment (the `metrics` crate compiles down to
# one `lock xadd` per bump once the recorder's registered), so the
# hot-path cost is a few nanoseconds per drop even at 400k req/s.
#
# Build with:
#   maturin develop --release --features leak_detect
# Snapshot the histogram from Python (handler or shutdown) via
#   pyronova.engine.leak_detect_dump()
# See docs/memory-leak-investigation-2026-04-19.md for how we used
# this to pin down the sub-interpreter finalizer bug.
leak_detect = ["dep:metrics", "dep:metrics-util"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
matchit = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
form_urlencoded = "1"
percent-encoding = "2"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
tokio-tungstenite = "0.26"
tungstenite = "0.26"
# base64 and sha1 provided transitively by tungstenite
futures-util = "0.3"
dashmap = "6"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
mimalloc = { version = "0.1", default-features = false }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
pythonize = "0.28"
flate2 = "1"
brotli = "7"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "logging", "tls12"] }
rustls-pemfile = "2"
pin-project-lite = "0.2"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "macros",
] }

# Optional — pulled in only by the `leak_detect` feature.
metrics = { version = "0.24", optional = true }
metrics-util = { version = "0.19", features = ["debugging"], optional = true }

[profile.release]
lto = "fat"            # Cross-crate inlining: LLVM optimizes across hyper/tokio/pyo3 boundaries
codegen-units = 1      # Single codegen unit: max optimization at cost of compile time
opt-level = 3          # Aggressive optimization
strip = true           # Strip symbols: smaller binary, better icache
