[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyreframework"
dynamic = ["version"]
description = "High-performance Python web framework powered by Rust — 2x faster than Robyn"
requires-python = ">=3.13"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: AsyncIO",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=1",
    "httpx",
    "websockets",
    "pydantic",
    "numpy",
    "msgpack",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pyreframework.engine"

[tool.pytest.ini_options]
# Put the project root on sys.path so tests that do
# `from tests.conftest import feature_server_factory` resolve whether
# pytest is invoked as `pytest tests/` or `python -m pytest tests/`.
# `python -m` prepends cwd automatically; bare `pytest` does not, and
# the test_*_e2e files depend on the tests package being importable.
pythonpath = ["."]
